syntax = "proto3";

import "Protos/shared.proto";

option csharp_namespace = "Persistify.Protos";

// Index
message IndexDocumentRequestProto {
  string TypeName = 1;
  string Data = 2;
}

message IndexDocumentResponseProto {
  int64 DocumentId = 1;
}

// Search
message SearchQueryProto {
  oneof Query {
    SearchOrOperatorProto OrOperator = 1;
    SearchAndOperatorProto AndOperator = 2;
    SearchNumberQueryProto NumberQuery = 3;
    SearchTextQueryProto TextQuery = 4;
    SearchBooleanQueryProto BooleanQuery = 5;
  }
}

message SearchDocumentsRequestProto {
  string TypeName = 1;
  PaginationRequestProto PaginationRequest = 2;
  SearchQueryProto Query = 3;
}

message SearchOrOperatorProto {
  repeated SearchQueryProto Queries = 1;
}

message SearchAndOperatorProto {
  repeated SearchQueryProto Queries = 2;
}

message SearchNumberQueryProto {
  string Path = 1;
  double Min = 2;
  double Max = 3;
}

message SearchTextQueryProto {
  string Path = 1;
  string Value = 2;
  bool Exact = 3;
  bool CaseSensitive = 4;
}

message SearchBooleanQueryProto {
  string Path = 1;
  bool Value = 2;
}

message SearchDocumentsResponseProto {
  repeated DocumentProto Documents = 1;
  PaginationResponseProto PaginationResponse = 2;
}

// Remove
message RemoveDocumentRequestProto {
  string TypeName = 1;
  int64 DocumentId = 2;
}

message RemoveDocumentResponseProto {
}
